# NakedWinQuake

./: .gitignore  Makefile.am  README.md  cd_sdl.c  common.c  configure.ac  mathlib.h  progs.h  quakedef.h  screen.c  sdlwinquake.vcxproj  snd_sdl.c  sys_sdl.c  vid_sdl.c  zone.c
WinQuake/: AUTHORS  CMakeLists.txt  Makefile.am  WinQuakeVS2022.sln  WinQuakeVS2022.vcxproj  WinQuakeVS2022.vcxproj.filters  cd_sdl.c  common.c  config.h  config.h.in  configure.ac  d_fill.c  d_iface.h  d_polyse.c  d_scan.c  host.c  host_cmd.c  mathlib.c  menu.c  net.h  net_dgrm.c  net_main.c  net_vcr.c  net_wins.c  net_wipx.c  pr_cmds.c  pr_comp.h  pr_edict.c  pr_exec.c  progs.h  quakedef.h  r_alias.c  r_bsp.c  r_draw.c  r_edge.c  r_main.c  r_surf.c  screen.c  snd_dma.c  snd_mix.c  (+10 more)
